css/style.css
html,
body,
header,
#intro {
    height: 100%;
}

#intro {
    background: url("../img/spaceXbackground.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.top-nav-collapse {
    background-color: #24355C;
}

/* Sound spectrum */
#canvas {
    position: fixed;
    left: 11%;
    bottom: 0px;
    height: 25%;
    width: 78%;
}

@media (max-width: 768px) {
    .navbar:not(.top-nav-collapse) {
        background-color: #24355C;
    }
}

@media (min-width: 800px) and (max-width: 850px) {
    .navbar:not(.top-nav-collapse) {
        background-color: #24355C;
    }
}

